--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
+
+spring.application.name=gittest-SERVICE
+
 eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
